--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,10 @@ buildscript {
     }
     dependencies {
         // A fork of https://github.com/wfhartford/gradle-dependency-analyze that works with Java 10
-        classpath 'stroom:gradle-dependency-analyze:v2.2.5'
+//        classpath 'stroom:gradle-dependency-analyze:v2.2.5'
         classpath 'com.benjaminsproule:swagger-gradle-plugin:1.0.6'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+//        classpath 'com.netflix.nebula:gradle-lint-plugin:latest.release'
     }
 }
 
@@ -16,9 +17,12 @@ plugins {
     // plugin for producing a tree of task dependencies, run task 'taskTree', e.g.
     // ./gradlew bintrayUpload taskTree --no-repeat
     id "com.dorongold.task-tree" version "1.3.1" apply true
+
+    id 'nebula.lint' version '10.4.0'
 }
 
-apply plugin: 'ca.cutterslade.analyze'
+//apply plugin: 'ca.cutterslade.analyze'
+//apply plugin: 'nebula.lint'
 
 // if the project has a value for the passed property (i.e from the cmd line via -PpropName=xxx)
 // use that, else use a default value
@@ -136,13 +140,22 @@ def projectsToBePublished = subprojects.findAll { project ->
 
 
 allprojects {
-
+    apply plugin: 'nebula.lint'
+////    gradleLint.rules = ['all-dependency'] // add as many rules here as you'd like
+//
+////    gradleLint.rules = ['none'] // add as many rules here as you'd like
+    gradleLint.rules = ['unused-dependency']
 }
 
 subprojects {
-    apply plugin: 'java-library'
-    apply plugin: 'ca.cutterslade.analyze'
+    apply plugin: 'java'
+//    apply plugin: 'ca.cutterslade.analyze'
     apply plugin: 'idea'
+    apply plugin: 'nebula.lint'
+
+//    gradleLint.rules = ['none'] // add as many rules here as you'd like
+//        gradleLint.rules = ['all-dependency'] // add as many rules here as you'd like
+    gradleLint.rules = ['unused-dependency']
 
     sourceCompatibility = JavaVersion.VERSION_1_10
     targetCompatibility = JavaVersion.VERSION_1_10
@@ -160,90 +173,90 @@ subprojects {
 
     task allDeps(type: DependencyReportTask) {}
 
-    // Make dependency analyser work with java-library plugin.
-    task analyzeJavaLibraryDependencies(dependsOn: classes, type: ca.cutterslade.gradle.analyze.AnalyzeDependenciesTask) {
-        classesDirs = sourceSets.main.output.classesDirs
-        require = [
-//                project.configurations.api,
-//project.configurations.compile,
-//                project.configurations.compileClasspath,
-                project.configurations.compile
-        ]
-        allowedToDeclare = [
-                project.configurations.permitUnusedDeclared
-        ]
-    }
-    task analyzeJavaLibraryTestDependencies(dependsOn: testClasses, type: ca.cutterslade.gradle.analyze.AnalyzeDependenciesTask) {
-        classesDirs = sourceSets.test.output.classesDirs
-        require = [
-//                project.configurations.testApi,
-                project.configurations.testCompile
-//                project.configurations.testRuntimeClasspath
-        ]
-        allowedToDeclare = [
-                project.configurations.permitTestUnusedDeclared
-        ]
-        allowedToUse = [
-                project.configurations.runtimeClasspath
-        ]
-    }
-//    task analyzeDeps(dependsOn: [analyzeJavaLibraryDependencies, analyzeJavaLibraryTestDependencies]) {
-//
-//    }
-
-//    def mainTask = project.task('analyzeJavaLibraryDependencies',
-//            dependsOn: 'classes',
-//            type: AnalyzeDependenciesTask,
-//            group: 'Verification',
-//            description: 'Analyze project for dependency issues related to main source set.'
-//    ) {
+//    // Make dependency analyser work with java-library plugin.
+//    task analyzeJavaLibraryDependencies(dependsOn: classes, type: ca.cutterslade.gradle.analyze.AnalyzeDependenciesTask) {
+//        classesDirs = sourceSets.main.output.classesDirs
 //        require = [
-//                project.configurations.runtimeClasspath,
-//                project.configurations.findByName('compileOnly'),
-//                project.configurations.findByName('provided')
-//        ]
-//        allowedToUse = [
-//                project.configurations.permitUsedUndeclared
+////                project.configurations.api,
+////project.configurations.compile,
+////                project.configurations.compileClasspath,
+//                project.configurations.compile
 //        ]
 //        allowedToDeclare = [
 //                project.configurations.permitUnusedDeclared
 //        ]
-//        def output = project.sourceSets.getByName(SourceSet.MAIN_SOURCE_SET_NAME).output
-//        classesDirs = output.hasProperty('classesDirs') ? output.classesDirs : project.files(output.classesDir)
 //    }
-//
-//    def testTask = project.task('analyzeTestClassesDependencies',
-//            dependsOn: 'testClasses',
-//            type: AnalyzeDependenciesTask,
-//            group: 'Verification',
-//            description: 'Analyze project for dependency issues related to test source set.'
-//    ) {
+//    task analyzeJavaLibraryTestDependencies(dependsOn: testClasses, type: ca.cutterslade.gradle.analyze.AnalyzeDependenciesTask) {
+//        classesDirs = sourceSets.test.output.classesDirs
 //        require = [
-//                project.configurations.testCompile,
-//                project.configurations.findByName('testCompileOnly')
-//        ]
-//        allowedToUse = [
-//                project.configurations.compile,
-//                project.configurations.permitTestUsedUndeclared,
-//                project.configurations.findByName('provided')
+////                project.configurations.testApi,
+//                project.configurations.testCompile
+////                project.configurations.testRuntimeClasspath
 //        ]
 //        allowedToDeclare = [
 //                project.configurations.permitTestUnusedDeclared
 //        ]
-//        def output = project.sourceSets.getByName(SourceSet.TEST_SOURCE_SET_NAME).output
-//        classesDirs = output.hasProperty('classesDirs') ? output.classesDirs : project.files(output.classesDir)
+//        allowedToUse = [
+//                project.configurations.runtimeClasspath
+//        ]
 //    }
+////    task analyzeDeps(dependsOn: [analyzeJavaLibraryDependencies, analyzeJavaLibraryTestDependencies]) {
+////
+////    }
 //
-//    project.check.dependsOn project.task('analyzeDeps',
-//            dependsOn: [analyzeJavaLibraryDependencies, analyzeJavaLibraryTestDependencies],
-//            group: 'Verification',
-//            description: 'Analyze project for dependency issues.'
-//    )
-//
-    tasks.analyzeJavaLibraryDependencies.dependsOn(classes)
-    tasks.analyzeJavaLibraryTestDependencies.dependsOn(testClasses)
-    tasks.check.dependsOn(analyzeJavaLibraryDependencies)
-    tasks.check.dependsOn(analyzeJavaLibraryTestDependencies)
+////    def mainTask = project.task('analyzeJavaLibraryDependencies',
+////            dependsOn: 'classes',
+////            type: AnalyzeDependenciesTask,
+////            group: 'Verification',
+////            description: 'Analyze project for dependency issues related to main source set.'
+////    ) {
+////        require = [
+////                project.configurations.runtimeClasspath,
+////                project.configurations.findByName('compileOnly'),
+////                project.configurations.findByName('provided')
+////        ]
+////        allowedToUse = [
+////                project.configurations.permitUsedUndeclared
+////        ]
+////        allowedToDeclare = [
+////                project.configurations.permitUnusedDeclared
+////        ]
+////        def output = project.sourceSets.getByName(SourceSet.MAIN_SOURCE_SET_NAME).output
+////        classesDirs = output.hasProperty('classesDirs') ? output.classesDirs : project.files(output.classesDir)
+////    }
+////
+////    def testTask = project.task('analyzeTestClassesDependencies',
+////            dependsOn: 'testClasses',
+////            type: AnalyzeDependenciesTask,
+////            group: 'Verification',
+////            description: 'Analyze project for dependency issues related to test source set.'
+////    ) {
+////        require = [
+////                project.configurations.testCompile,
+////                project.configurations.findByName('testCompileOnly')
+////        ]
+////        allowedToUse = [
+////                project.configurations.compile,
+////                project.configurations.permitTestUsedUndeclared,
+////                project.configurations.findByName('provided')
+////        ]
+////        allowedToDeclare = [
+////                project.configurations.permitTestUnusedDeclared
+////        ]
+////        def output = project.sourceSets.getByName(SourceSet.TEST_SOURCE_SET_NAME).output
+////        classesDirs = output.hasProperty('classesDirs') ? output.classesDirs : project.files(output.classesDir)
+////    }
+////
+////    project.check.dependsOn project.task('analyzeDeps',
+////            dependsOn: [analyzeJavaLibraryDependencies, analyzeJavaLibraryTestDependencies],
+////            group: 'Verification',
+////            description: 'Analyze project for dependency issues.'
+////    )
+////
+//    tasks.analyzeJavaLibraryDependencies.dependsOn(classes)
+//    tasks.analyzeJavaLibraryTestDependencies.dependsOn(testClasses)
+//    tasks.check.dependsOn(analyzeJavaLibraryDependencies)
+//    tasks.check.dependsOn(analyzeJavaLibraryTestDependencies)
 
 
     configurations {
@@ -452,7 +465,7 @@ task aggregatedJavadocs(
     options.addStringOption 'Xdoclint:none', '-quiet'
 
     // this switch is needed in java10
-    //options.addBooleanOption('html5', true)
+    options.addBooleanOption('html5', true)
 
     projectsToBePublished.each { proj ->
         proj.tasks.withType(Javadoc).each { javadocTask ->
