--- a/stroom-docref/build.gradle
+++ b/stroom-docref/build.gradle
@@ -17,8 +17,8 @@
 ext.moduleName = 'stroom.docref'
 
 dependencies {
-    implementation libs.jackson_annotations
-    implementation libs.swagger_annotations
-    implementation libs.jaxb_api
+    compile libs.jackson_annotations
+    compile libs.swagger_annotations
+    compile libs.jaxb_api
 }
 
