--- a/stroom-query-testing/build.gradle
+++ b/stroom-query-testing/build.gradle
@@ -18,44 +18,44 @@ ext.moduleName = 'stroom.query.testing'
 
 dependencies {
     //--------Project----------
-    implementation project(':stroom-docref')
-    implementation project(':stroom-query-api')
-    implementation project(':stroom-query-authorisation')
-    implementation project(':stroom-query-audit')
+    compile project(':stroom-docref')
+    compile project(':stroom-query-api')
+    compile project(':stroom-query-authorisation')
+    compile project(':stroom-query-audit')
 
     //--------3rd party--------
-    implementation libs.assertj_core
-    implementation libs.dropwizard_auth
-    implementation libs.dropwizard_core
-    implementation libs.dropwizard_jersey
-    implementation libs.dropwizard_jooq
-    implementation libs.dropwizard_testing
-    implementation libs.guice
-    implementation libs.google_findbugs
-    implementation libs.hibernate_core
-    implementation libs.hibernate_jpa
-    implementation libs.javax_ws;
-    implementation libs.jackson_core
-    implementation libs.jackson_databind
-    implementation libs.jaxb_api
-    implementation libs.jetty_http
-    implementation libs.jose4j
-    implementation libs.junit_jupiter_api
-    implementation libs.mockito_core
-    implementation libs.slf4j_api
-    implementation libs.wiremock
-    implementation libs.test_containers
-    implementation libs.test_containers_mysql
+    compile libs.assertj_core
+    compile libs.dropwizard_auth
+    compile libs.dropwizard_core
+    compile libs.dropwizard_jersey
+    compile libs.dropwizard_jooq
+    compile libs.dropwizard_testing
+    compile libs.guice
+    compile libs.google_findbugs
+    compile libs.hibernate_core
+    compile libs.hibernate_jpa
+    compile libs.javax_ws;
+    compile libs.jackson_core
+    compile libs.jackson_databind
+    compile libs.jaxb_api
+    compile libs.jetty_http
+    compile libs.jose4j
+    compile libs.junit_jupiter_api
+    compile libs.mockito_core
+    compile libs.slf4j_api
+    compile libs.wiremock
+    compile libs.test_containers
+    compile libs.test_containers_mysql
     
-    testImplementation project(':stroom-query-hibernate')
-    testImplementation project(':stroom-query-jooq')
+    testCompile project(':stroom-query-hibernate')
+    testCompile project(':stroom-query-jooq')
     
-    testImplementation libs.assertj_core
-    testImplementation libs.dropwizard_core
-    testImplementation libs.dropwizard_flyway
-    testImplementation libs.dropwizard_jersey
-    testImplementation libs.jackson_annotations
-    testImplementation libs.junit_jupiter_api
+    testCompile libs.assertj_core
+    testCompile libs.dropwizard_core
+    testCompile libs.dropwizard_flyway
+    testCompile libs.dropwizard_jersey
+    testCompile libs.jackson_annotations
+    testCompile libs.junit_jupiter_api
 
     testRuntimeOnly libs.javax_transaction
     testRuntimeOnly libs.jaxb_runtime
