--- a/stroom-query-common/build.gradle
+++ b/stroom-query-common/build.gradle
@@ -34,8 +34,8 @@ dependencies {
 
     //--------testing----------
     testCompile libs.assertj_core
-    testCompileOnly libs.junit_jupiter_api
+    testCompile libs.junit_jupiter_api
     testCompile libs.mockito_core
 
-    testRuntimeOnly libs.junit_jupiter_engine
+    testRuntime libs.junit_jupiter_engine
 }
