--- a/stroom-query-jooq/build.gradle
+++ b/stroom-query-jooq/build.gradle
@@ -17,31 +17,32 @@
 ext.moduleName = 'stroom.query.jooq'
 
 dependencies {
+    compile 'org.glassfish.hk2.external:javax.inject:2.5.0-b32'
+    compile 'io.dropwizard.metrics:metrics-core:4.0.2'
     //--------Project----------
-    implementation project(':stroom-docref')
-    implementation project(':stroom-query-api')
-    implementation project(':stroom-query-common')
-    implementation project(':stroom-query-audit')
-    implementation project(':stroom-query-authorisation')
+    compile project(':stroom-docref')
+    compile project(':stroom-query-api')
+    compile project(':stroom-query-common')
+    compile project(':stroom-query-audit')
+    compile project(':stroom-query-authorisation')
 
     // ------- Stroom ---------
-    implementation libs.stroomExpression
+    compile libs.stroomExpression
 
     //--------3rd party--------
-    implementation libs.dropwizard_core
-    implementation libs.dropwizard_jooq
-    implementation libs.dropwizard_db
-    implementation libs.dropwizard_flyway
-    implementation libs.flyway_core
-    implementation libs.guava
-    implementation libs.guice
-    implementation libs.javax_inject
-    implementation libs.jaxb_api
-    implementation libs.jooq
-    implementation libs.slf4j_api
+    compile libs.dropwizard_core
+    compile libs.dropwizard_jooq
+    compile libs.dropwizard_db
+    compile libs.dropwizard_flyway
+    compile libs.flyway_core
+    compile libs.guava
+    compile libs.guice
+    compile libs.javax_inject
+    compile libs.jooq
+    compile libs.slf4j_api
 
     testCompile libs.assertj_core
-    testCompileOnly libs.junit_jupiter_api
+    testCompile 'org.junit.jupiter:junit-jupiter-api:5.3.2'
 
-    testRuntimeOnly libs.junit_jupiter_engine
+    testRuntime libs.junit_jupiter_engine
 }
