--- a/stroom-query-testing/build.gradle
+++ b/stroom-query-testing/build.gradle
@@ -17,6 +17,18 @@
 ext.moduleName = 'stroom.query.testing'
 
 dependencies {
+    testCompile 'org.glassfish.hk2.external:javax.inject:2.5.0-b32'
+    testCompile 'com.bendb.dropwizard:dropwizard-jooq:1.1.0-0'
+    testCompile 'io.dropwizard:dropwizard-db:1.3.3'
+    testCompile 'javax.inject:javax.inject:1'
+    testCompile 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final'
+    testCompile 'io.dropwizard.metrics:metrics-healthchecks:4.0.2'
+    testCompile 'org.apache.commons:commons-text:1.2'
+    testCompile 'org.jooq:jooq:3.9.3'
+    testCompile 'javax.validation:validation-api:1.1.0.Final'
+    testCompile 'org.hibernate:hibernate-core:5.2.15.Final'
+    testCompile 'io.dropwizard:dropwizard-auth:1.3.3'
+    testCompile 'io.dropwizard:dropwizard-configuration:1.3.3'
     //--------Project----------
     compile project(':stroom-docref')
     compile project(':stroom-query-api')
@@ -25,26 +37,18 @@ dependencies {
 
     //--------3rd party--------
     compile libs.assertj_core
-    compile libs.dropwizard_auth
     compile libs.dropwizard_core
-    compile libs.dropwizard_jersey
-    compile libs.dropwizard_jooq
     compile libs.dropwizard_testing
     compile libs.guice
     compile libs.google_findbugs
-    compile libs.hibernate_core
-    compile libs.hibernate_jpa
     compile libs.javax_ws;
     compile libs.jackson_core
     compile libs.jackson_databind
-    compile libs.jaxb_api
-    compile libs.jetty_http
     compile libs.jose4j
     compile libs.junit_jupiter_api
     compile libs.mockito_core
     compile libs.slf4j_api
     compile libs.wiremock
-    compile libs.test_containers
     compile libs.test_containers_mysql
     
     testCompile project(':stroom-query-hibernate')
@@ -57,9 +61,9 @@ dependencies {
     testCompile libs.jackson_annotations
     testCompile libs.junit_jupiter_api
 
-    testRuntimeOnly libs.javax_transaction
-    testRuntimeOnly libs.jaxb_runtime
-    testRuntimeOnly libs.junit_jupiter_engine
-    testRuntimeOnly libs.mariadb_connector
-    testRuntimeOnly 'org.apache.derby:derby:10.8.2.2'
+    testRuntime libs.javax_transaction
+    testRuntime libs.jaxb_runtime
+    testRuntime libs.junit_jupiter_engine
+    testRuntime libs.mariadb_connector
+    testRuntime 'org.apache.derby:derby:10.8.2.2'
 }
