--- a/build.gradle
+++ b/build.gradle
@@ -25,11 +25,11 @@ ext.versions = [
     eventLogging: 'v3.1.2_schema-v3.1.2',
 
     //------------3rd-party------------
-    dropwizard: '1.2.0',
-    jackson: '2.8.6',
-    logback: '1.2.1', //in line with dropwizard 1.1.0
+    dropwizard: '1.3.14',
+    jackson: '2.9.9', //in line with dropwizard 1.3.14
+    logback: '1.2.3', //in line with dropwizard 1.3.14
     kafka: '0.10.0.1',
-    slf4j: '1.7.24', //in line with dropwizard 1.1.0
+    slf4j: '1.7.26', //in line with dropwizard 1.3.14
     swagger: '1.5.16',
     zzDUMMYzz: 'makes sorting this list easier'
 ]
