--- a/build.gradle
+++ b/build.gradle
@@ -40,10 +40,10 @@ ext.getPropertyOrDefault = { propName, defaultValue ->
 
 ext.versions = [
         //----------Stroom-----------------
-        stroomQuery       : getPropertyOrDefault('version', 'SNAPSHOT'),
+        stroomQuery       : getPropertyOrDefault('version', 'v4.0-beta.38'),
 
         //------Stroom-libs---------------
-        stroomExpression  : 'SNAPSHOT',
+        stroomExpression  : 'v3.0.0',
         eventLogging      : 'v4.0.5_schema-v3.2.4',
 
         //------------3rd-party------------
