--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 
 buildscript {
-    if(JavaVersion.current() != JavaVersion.VERSION_1_8)
-        throw new GradleException("This build requires Java 8. Current SDK version is "+JavaVersion.current())
+    if(JavaVersion.current() != JavaVersion.VERSION_12)
+        throw new GradleException("This build requires Java 12. Current SDK version is "+JavaVersion.current())
 
     repositories {
         mavenLocal()
@@ -50,22 +50,15 @@ ext.versions = [
         dropwizard        : '1.3.14',
         dropwizard_jooq   : '1.1.0-0',
         dropwizard_metrics: '4.0.5', // in line with dropwizard 1.3.14
-        flyway            : '4.0.3',
+        flyway            : '5.2.4',
         glassfish         : '2.5.0-b32',
-        guava             : '21.0',
-        jackson           : '2.9.9', // in line with dropwizard 1.3.14
         javax_inject      : '1',
-        javax_ws          : '2.0.1',
-        javax_servlet     : '3.1.0',
-        jersey            : '2.25.1',
-        jetty             : '9.4.18.v20190429', // in line with dropwizard 1.3.14
-        jooq              : '3.9.3',
+        javax_ws          : '2.1',
+        jooq              : '3.12.3',
         jose4j            : '0.5.2',
-        junit             : '5.3.2',
-        logback           : '1.2.3', // in line with dropwizard 1.3.14
+        junit             : '5.6.0',
         kafka             : '0.10.0.1',
-        slf4j             : '1.7.26', // in line with dropwizard 1.3.14
-        swagger           : '1.5.16',
+        swagger           : '1.5.21',
         zzDUMMYzz         : 'makes sorting this list easier'
 ]
 
@@ -77,44 +70,44 @@ ext.libs = [
 
         //------------3rd-party------------
         assertj_core        : 'org.assertj:assertj-core:3.10.0',
-        dropwizard_core     : "io.dropwizard:dropwizard-core:$versions.dropwizard",
-        dropwizard_db       : "io.dropwizard:dropwizard-db:$versions.dropwizard",
-        dropwizard_auth     : "io.dropwizard:dropwizard-auth:$versions.dropwizard",
+        dropwizard_bom      : "io.dropwizard:dropwizard-bom:$versions.dropwizard",
+        dropwizard_core     : "io.dropwizard:dropwizard-core", // version controlled by DW BOM
+        dropwizard_db       : "io.dropwizard:dropwizard-db", // version controlled by DW BOM
+        dropwizard_auth     : "io.dropwizard:dropwizard-auth", // version controlled by DW BOM
         dropwizard_auth_jwt : "com.github.toastshaman:dropwizard-auth-jwt:1.0.2-0",
         dropwizard_jooq     : "com.bendb.dropwizard:dropwizard-jooq:$versions.dropwizard_jooq",
-        dropwizard_logging  : "io.dropwizard:dropwizard-logging:$versions.dropwizard",
-        dropwizard_jersey   : "io.dropwizard:dropwizard-jersey:$versions.dropwizard",
+        dropwizard_logging  : "io.dropwizard:dropwizard-logging", // version controlled by DW BOM
+        dropwizard_jersey   : "io.dropwizard:dropwizard-jersey", // version controlled by DW BOM
         dropwizard_flyway   : 'io.dropwizard.modules:dropwizard-flyway:1.0.0-1',
         dropwizard_metrics  : "io.dropwizard.metrics:metrics-annotation:$versions.dropwizard_metrics",
-        dropwizard_testing  : "io.dropwizard:dropwizard-testing:$versions.dropwizard",
+        dropwizard_testing  : "io.dropwizard:dropwizard-testing", // version controlled by DW BOM
         flyway_core         : "org.flywaydb:flyway-core:$versions.flyway",
         glassfish_hk2       : "org.glassfish.hk2:hk2-api:$versions.glassfish",
-        guava               : "com.google.guava:guava:$versions.guava", //>=v21 removes MoreExecutors.sameThreadExecutor() which is needed by curator 2.11
-        guice               : "com.google.inject:guice:4.2.0",
-        google_findbugs     : "com.google.code.findbugs:jsr305:3.0.2",
-        jackson_annotations : "com.fasterxml.jackson.core:jackson-annotations:$versions.jackson",
-        jackson_core        : "com.fasterxml.jackson.core:jackson-core:$versions.jackson",
-        jackson_databind    : "com.fasterxml.jackson.core:jackson-databind:$versions.jackson",
+        guava               : "com.google.guava:guava", // version controlled by DW BOM
+        guice               : "com.google.inject:guice:4.2.2:no_aop",
+        jackson_annotations : "com.fasterxml.jackson.core:jackson-annotations", // version controlled by DW BOM
+        jackson_core        : "com.fasterxml.jackson.core:jackson-core", // version controlled by DW BOM
+        jackson_databind    : "com.fasterxml.jackson.core:jackson-databind", // version controlled by DW BOM
         javax_inject        : "javax.inject:javax.inject:$versions.javax_inject",
         javax_ws            : "javax.ws.rs:javax.ws.rs-api:$versions.javax_ws",
-        javax_servlet       : "javax.servlet:javax.servlet-api:$versions.javax_servlet",
+        javax_servlet       : "javax.servlet:javax.servlet-api", // version controlled by DW BOM
         javax_transaction   : "javax.transaction:jta:1.1",
-        jaxb_api            : "javax.xml.bind:jaxb-api:2.3.1",
-        jaxb_runtime        : "org.glassfish.jaxb:jaxb-runtime:2.3.1",
-        jersey_client       : "org.glassfish.jersey.core:jersey-client:$versions.jersey",
-        jersey_server       : "org.glassfish.jersey.core:jersey-server:$versions.jersey",
-        jetty_http          : "org.eclipse.jetty:jetty-http:$versions.jetty",
+        jaxb_api            : "javax.xml.bind:jaxb-api:2.4.0-b180830.0359",
+        jaxb_runtime        : "org.glassfish.jaxb:jaxb-runtime:2.4.0-b180830.0438",
+        jersey_client       : "org.glassfish.jersey.core:jersey-client", // version controlled by DW BOM
+        jersey_server       : "org.glassfish.jersey.core:jersey-server", // version controlled by DW BOM
+        jetty_http          : "org.eclipse.jetty:jetty-http", // version controlled by DW BOM
         junit_jupiter_api   : "org.junit.jupiter:junit-jupiter-api:${versions.junit}",
         junit_jupiter_engine: "org.junit.jupiter:junit-jupiter-engine:${versions.junit}",
         jose4j              : "org.bitbucket.b_c:jose4j:$versions.jose4j",
         jooq                : "org.jooq:jooq:$versions.jooq",
-        logback_classic     : "ch.qos.logback:logback-classic:$versions.logback",
-        logback_core        : "ch.qos.logback:logback-core:$versions.logback",
+        logback_classic     : "ch.qos.logback:logback-classic", // version controlled by DW BOM
+        logback_core        : "ch.qos.logback:logback-core", // version controlled by DW BOM
         kafka               : "org.apache.kafka:kafka-clients:$versions.kafka", // CDH5.10 uses kafka 10.0, Kafka <10.2 is picky about client and server versions.
         mariadb_connector   : 'org.mariadb.jdbc:mariadb-java-client:2.0.2',
         mysql_connector     : "mysql:mysql-connector-java:5.1.6",
         mockito_core        : "org.mockito:mockito-core:2.23.4",
-        slf4j_api           : "org.slf4j:slf4j-api:$versions.slf4j",
+        slf4j_api           : "org.slf4j:slf4j-api", // version controlled by DW BOM
         swagger_annotations : "io.swagger:swagger-annotations:$versions.swagger",
         test_containers     : "org.testcontainers:testcontainers:1.12.0",
         test_containers_mysql: "org.testcontainers:mysql:1.12.0",
@@ -145,8 +138,13 @@ subprojects {
 //    apply plugin: 'ca.cutterslade.analyze'
     apply plugin: 'idea'
 
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = JavaVersion.VERSION_12
+    targetCompatibility = JavaVersion.VERSION_12
+
+    // This bit makes all sub projects have access to the BOMs for the dependency versions
+    dependencies {
+        compile platform(libs.dropwizard_bom)
+    }
 
     repositories {
         mavenLocal()
@@ -266,10 +264,10 @@ subprojects {
 //            exclude module: 'xercesImpl'
 //
             resolutionStrategy {
-                dependencySubstitution {
-//                    substitute module('log4j:log4j') with module("org.slf4j:log4j-over-slf4j:$versions.slf4j")
-                    substitute module('com.google.guava:guava') with module("com.google.guava:guava:$versions.guava")
-                }
+//                dependencySubstitution {
+////                    substitute module('log4j:log4j') with module("org.slf4j:log4j-over-slf4j:$versions.slf4j")
+//                    substitute module('com.google.guava:guava') with module("com.google.guava:guava:$versions.guava")
+//                }
 //
 //                // Stop libs from dragging in a different version of dropwizard
 //                eachDependency { DependencyResolveDetails details ->
