--- a/stroom-query-sample/build.gradle
+++ b/stroom-query-sample/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation project(':stroom-query-api')
 
     //--------3rd party--------
+    implementation libs.jackson_annotations
     implementation libs.jaxb_api
     implementation libs.swagger_annotations
     implementation libs.ws_rs_api
