--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ ext.getPropertyOrDefault = { propName, defaultValue ->
 
 ext.versions = [
         //----------Stroom-----------------
-        stroomQuery       : getPropertyOrDefault('version', 'v4.0-beta.38'),
+        stroomQuery       : getPropertyOrDefault('version', 'SNAPSHOT'),
 
         //------Stroom-libs---------------
         stroomExpression  : 'v3.0.3',
