--- a/stroom-query-api/build.gradle
+++ b/stroom-query-api/build.gradle
@@ -16,7 +16,7 @@
 
 
 dependencies {
-    compile libs.jackson_annotations
-    compile libs.swagger_annotations
+    implementation libs.jackson_annotations
+    implementation libs.swagger_annotations
 }
 
