--- a/stroom-query-hibernate/build.gradle
+++ b/stroom-query-hibernate/build.gradle
@@ -16,12 +16,15 @@
 
 dependencies {
     //--------Project----------
-    compile project(':stroom-query-api')
-    compile project(':stroom-query-common')
-    compile project(':stroom-query-audit')
+    implementation project(':stroom-query-api')
+    implementation project(':stroom-query-common')
+    implementation project(':stroom-query-audit')
+
+    //--------Stroom libs------
+    implementation libs.stroomExpression
 
     //--------3rd party--------
-    compile libs.dropwizard_core
-    compile libs.dropwizard_hibernate
-    compile libs.slf4j_api
+    implementation libs.dropwizard_core
+    implementation libs.dropwizard_hibernate
+    implementation libs.slf4j_api
 }
