--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,17 @@
 buildscript {
     repositories {
         mavenLocal()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'ca.cutterslade.gradle:gradle-dependency-analyze:1.1.0'
         classpath 'com.benjaminsproule:swagger-gradle-plugin:1.0.14'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
     }
 }
 
 plugins {
-    id 'maven-publish'
+    id "signing"
+    id "io.github.gradle-nexus.publish-plugin" version "1.0.0"
 }
 
 //if the project has a value for the passed property (i.e from the cmd line via -PpropName=xxx)
@@ -77,39 +77,77 @@ ext.libs = [
     zzDUMMYzz: "makes sorting easier"
 ]
 
-// To give us the clean task
+
+//defines a list of gradle projects that we will publish with maven/bintray
+def projectsToBePublished = subprojects.findAll { project ->
+    project.path in [
+            ':stroom-query-api',
+            ':stroom-query-common',
+            ':stroom-query-audit',
+    ]
+}
+
+// To give us the clean task on the root project
 apply plugin: 'base'
+apply plugin: 'io.github.gradle-nexus.publish-plugin'
 
 allprojects {
-    apply plugin: 'maven-publish'
-    apply plugin: 'com.jfrog.bintray'
-
-    group = 'stroom'
+    group = 'uk.gov.gchq.stroom.query'
     version = versions.stroomQuery
 }
 
-def pomConfig = {
-    licenses {
-        license {
-            name "The Apache Software License, Version 2.0"
-            url "http://www.apache.org/licenses/LICENSE-2.0.txt"
-            distribution "repo"
+String base64DecodeProjectProperty(String propName) {
+    def encodedVal = project.findProperty(propName)
+    return encodedVal == null
+        ? null
+        : new String(Base64.getDecoder().decode(encodedVal.toString())).trim()
+}
+
+void configureSigning(Project project) {
+
+    // To create the GPG key do:
+    //   gpg2 --gen-key 
+    // To list it
+    //   gpg2 --list-keys
+    // To publish the public key on a keyserver
+    //   gpg2 --keyserver hkp://keyserver.ubuntu.com --send-keys <your short key id>
+    // To get the ascii-armour private key for use in travis env vars as base64 encoded
+    //   gpg2 --armor --export-secret-keys <your short key id> | base64 -w0
+
+    //project.signing.gnupg.keyName = project.findProperty("signingKeyId")
+
+    project.signing {
+        println "Configuring project to sign maven artifacts"
+        required { project.gradle.taskGraph.hasTask("required") }
+        def signingKeyId = project.findProperty("signingKeyId")
+        def signingKey = base64DecodeProjectProperty("signingKey")
+        def signingPassword = project.findProperty("signingPassword")
+
+        //println "pword: [$signingPassword]"
+        //println "key: [$signingKey]"
+        //println "keyId: [$signingKeyId]"
+
+        if (signingKeyId) {
+            println "Using in memory pgp key with ID"
+            useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
+        } else if (signingKey) {
+            println "Using in memory pgp key without ID"
+            useInMemoryPgpKeys(signingKey, signingPassword)
         }
-    }
-    scm {
-       url "https://github.com/stroom/stroom-query"
+        //useGpgCmd()
+        sign project.publishing.publications.mavenJava
     }
 }
 
 subprojects {
-    apply plugin: 'java'
+    apply plugin: 'java-library'
     apply plugin: 'idea'
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 
     repositories {
         mavenLocal()
-        jcenter()
+        mavenCentral()
         maven { url "https://dl.bintray.com/stroom/event-logging" }
         maven { url "https://dl.bintray.com/stroom/stroom" }
     }
@@ -118,118 +156,97 @@ subprojects {
         testImplementation libs.junit
         testImplementation libs.mockito_core
     }
-
-    task sourcesJar(type: Jar, dependsOn: classes) {
-        classifier = 'sources'
-        from sourceSets.main.allSource
-    }
-
-    task javadocJar(type: Jar, dependsOn: javadoc) {
-        classifier = 'javadoc'
-        from javadoc.destinationDir
-    }
-
-    artifacts {
-        archives sourcesJar
-        archives javadocJar
-    }
-
-    publishing {
-        publications {
-            mavenJava(MavenPublication) {
-                artifact sourcesJar
-                artifact javadocJar
-                pom.withXml {
-                    def root = asNode()
-                    root.appendNode('name', project.name)
-                    root.children().last() + pomConfig
-                }
-            }
-        }
-    }
-
-    //configuration for the bintray plugin for uploading maven artefacts to bintray
-    //see https://github.com/bintray/gradle-bintray-plugin
-    //run task bintrayUpload to push the files, assuming BINTRAY_USER/KEY are set as env vars
-    bintray {
-        //Must never write these to log or system out
-        user = System.getenv('BINTRAY_USER') //set in Travis UI
-        key = System.getenv('BINTRAY_KEY') //set in Travis UI
-
-        //The maven plugin publications to push to bintray
-        publications = ['mavenJava']
-
-        //immediately make the artefacts public
-        publish = true
-
-        pkg {
-            repo = 'stroom'
-            name = 'stroom-query'
-            userOrg = 'stroom'
-            licenses = ['Apache-2.0']
-            vcsUrl = 'https://github.com/gchq/stroom-query.git'
-            version {
-                name = "${versions.stroomQuery}"
-                desc = "stroom-query-${versions.stroomQuery}"
-                released  = new Date()
-                vcsTag = "${versions.stroomQuery}"
-                gpg {
-                    //Bintray will self-sign the files
-                    sign = true //Determines whether to GPG sign the files. The default is false
-                }
-            }
-        }
-    }
 }
 
-project(':stroom-query-api') {
+// configuration for the projects that are being published in maven
+configure(projectsToBePublished) {
+    apply plugin: 'maven-publish'
+    apply plugin: 'signing'
+
+    //for java plugin
+    //see https://docs.gradle.org/current/userguide/java_plugin.html
+    java {
+        //package JavaDoc as part of publication
+        withJavadocJar()
+        //package Sources as part of publication
+        withSourcesJar()
+    }
+
     publishing {
         publications {
             mavenJava(MavenPublication) {
                 from components.java
+
+                pom {
+                    name = project['name']
+                    description = project['description']
+                    url = 'https://github.com/gchq/stroom-query'
+                    licenses {
+                        license {
+                            name = 'The Apache License, Version 2.0'
+                            url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        }
+                    }
+                    developers {
+                        developer {
+                            id = 'at055612'
+                            name = 'at055612'
+                        }
+                        developer {
+                            id = 'gcdev373'
+                            name = 'gcdev373'
+                        }
+                        developer {
+                            id = 'stroomdev66'
+                            name = 'stroomdev66'
+                        }
+                    }
+                    scm {
+                        connection = 'scm:git:git@github.com:gchq/stroom-query.git'
+                        developerConnection = 'scm:git:git@github.com:gchq/stroom-query.git'
+                        url = 'https://github.com/gchq/stroom-query'
+                    }
+                }         
             }
         }
     }
+
+    def hasSigningKey = project.hasProperty("signingkeyId") || project.findProperty("signingKey")
+    if(hasSigningKey) {
+        configureSigning(project)
+    }
+
 }
 
-project(':stroom-query-common') {
-    publishing {
-        publications {
-            mavenJava(MavenPublication) {
-                from components.java
-            }
-        }
-    }
-}
+// Uses sonotypeUsername and sonotypePassword
+// See https://github.com/rwinch/gradle-publish-ossrh-sample
+// Also https://github.com/kit-data-manager/nexus-publish-example
+nexusPublishing {
+    repositories {
+        sonatype()    //sonatypeUsername and sonatypePassword properties are used automatically
+        //sonatype {  //only for users registered in Sonatype after 24 Feb 2021
+            ////nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
+            ////snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
+            //nexusUrl.set(uri("http://localhost:8081/service/local/"))
+            //snapshotRepositoryUrl.set(uri("https://localhost:8081/content/repositories/snapshots/"))
+        //}
 
-project(':stroom-query-audit') {
-    publishing {
-        publications {
-            mavenJava(MavenPublication) {
-                from components.java
-            }
-        }
-    }
-}
+        //myStroomQueryNexus {
+            ////nexusUrl = uri("http://localhost:8081/repository/maven-releases/")
+            //nexusUrl = uri("http://localhost:8081/nexus/service/local/")
+            //snapshotRepositoryUrl = uri("http://localhost:8081/repository/maven-snapshots/")
 
-project(':stroom-query-hibernate') {
-    publishing {
-        publications {
-            mavenJava(MavenPublication) {
-                from components.java
-            }
-        }
-    }
-}
+            ////nexusUrl = uri('http://localhost:8081/nexus/content/repositories/releases/')
+            ////snapshotRepositoryUrl = uri('http://localhost:8081/nexus/content/repositories/internal-snapshots/')
 
-project(':stroom-query-testing') {
-    publishing {
-        publications {
-            mavenJava(MavenPublication) {
-                from components.java
-            }
-        }
+            //username = "admin" // defaults to project.properties["myNexusUsername"]
+            //password = "admin" // defaults to project.properties["myNexusPassword"]
+        //}
     }
+    // these are not strictly required. The default timeouts are set to 1 minute. But Sonatype can be really slow.
+    // If you get the error "java.net.SocketTimeoutException: timeout", these lines will help.
+    connectTimeout = Duration.ofMinutes(3)
+    clientTimeout = Duration.ofMinutes(3)
 }
 
 // This is so we can publish the javadoc for all sub projects as a single aggregated set on
@@ -243,19 +260,13 @@ task aggregatedJavadocs(
         println "Created aggregate javadoc"
     }
 
-    //dependsOn project(':stroom-query-api').javadoc
-    //dependsOn project(':stroom-query-common').javadoc
-    //dependsOn project(':stroom-query-hibernate').javadoc
-    //dependsOn project(':stroom-query-audit').javadoc
-    //dependsOn project(':stroom-query-testing').javadoc
-
     destinationDir = file("$buildDir/docs/javadoc")
     title = "$project.name $version API"
     options.author true
     options.links 'http://docs.oracle.com/javase/8/docs/api/'
     options.addStringOption 'Xdoclint:none', '-quiet'
 
-    subprojects.each { proj ->
+    projectsToBePublished.each { proj ->
         proj.tasks.withType(Javadoc).each { javadocTask ->
             dependsOn proj.javadoc
 
