--- a/stroom-query-common/build.gradle
+++ b/stroom-query-common/build.gradle
@@ -16,16 +16,18 @@
 
 dependencies {
     //--------Project----------
-    implementation project(':stroom-query-api')
+    api project(':stroom-query-api')
 
     //--------Stroom libs------
-    implementation libs.stroomExpression
+    api libs.stroomExpression
 
-    //--------3rd party--------
+    //--------3rd party api--------
+    api libs.jackson_databind
+    api libs.jackson_annotations
+    api libs.jackson_core
+
+    //--------3rd party impl--------
     implementation libs.guava
-    implementation libs.jackson_databind
-    implementation libs.jackson_annotations
-    implementation libs.jackson_core
     implementation libs.slf4j_api
 
     //--------testing----------
